{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 86,
  "lineage": "a34273c4-96f5-4315-8697-4c774f0031cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d5dc654b91bffda",
            "association_id": "eipassoc-0cd5bb150a211bb46",
            "domain": "vpc",
            "id": "eipalloc-06d5dc654b91bffda",
            "network_border_group": "us-east-2",
            "network_interface": "eni-03f9f53d542adff7c",
            "private_dns": "ip-192-168-1-234.us-east-2.compute.internal",
            "private_ip": "192.168.1.234",
            "public_dns": "ec2-3-20-128-102.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.128.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-gw-eip"
            },
            "tags_all": {
              "Name": "nat-gw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0d9cf81c479446a",
            "arn": "arn:aws:ec2:us-east-2:498382626667:instance/i-097b295377a317f93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097b295377a317f93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "rafay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fcc8890b6093e32b",
            "private_dns": "ip-192-168-2-11.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.11",
            "public_ip": "18.222.135.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f45224390ae6922",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077dd24920c8525e1",
            "tags": {
              "Name": "bastion01"
            },
            "tags_all": {
              "Name": "bastion01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08fff05a62bf1c574"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "data.aws_ami.amz_linux",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0d9cf81c479446a",
            "arn": "arn:aws:ec2:us-east-2:498382626667:instance/i-09413fcf87d294383",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09413fcf87d294383",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "rafay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0586a002a1ef17fa4",
            "private_dns": "ip-192-168-101-115.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.101.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054c61f0da42d678a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070653cfc33fd920e",
            "tags": {
              "Name": "private01"
            },
            "tags_all": {
              "Name": "private01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08fff05a62bf1c574"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "data.aws_ami.amz_linux",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "discogs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:internet-gateway/igw-0b607349f68071dce",
            "id": "igw-0b607349f68071dce",
            "owner_id": "498382626667",
            "tags": {
              "Name": "discogs-vpc-igw"
            },
            "tags_all": {
              "Name": "discogs-vpc-igw"
            },
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "dependencies": [
            "aws_vpc.discogs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d5dc654b91bffda",
            "association_id": "eipassoc-0cd5bb150a211bb46",
            "connectivity_type": "public",
            "id": "nat-051fe7b24aa9d33c3",
            "network_interface_id": "eni-03f9f53d542adff7c",
            "private_ip": "192.168.1.234",
            "public_ip": "3.20.128.102",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de72361c36d68943",
            "tags": {
              "Name": "nat-gw"
            },
            "tags_all": {
              "Name": "nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat-gw-eip",
            "aws_internet_gateway.discogs_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:route-table/rtb-07b284349d1acdeb1",
            "id": "rtb-07b284349d1acdeb1",
            "owner_id": "498382626667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051fe7b24aa9d33c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RouteTable"
            },
            "tags_all": {
              "Name": "Private-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-gw-eip",
            "aws_internet_gateway.discogs_igw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public_subnets",
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:route-table/rtb-0b5e1d2f06eb679e5",
            "id": "rtb-0b5e1d2f06eb679e5",
            "owner_id": "498382626667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b607349f68071dce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTable"
            },
            "tags_all": {
              "Name": "Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.discogs_igw",
            "aws_vpc.discogs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "addRoute_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08579ba444116d1f4",
            "route_table_id": "rtb-07b284349d1acdeb1",
            "subnet_id": "subnet-070653cfc33fd920e"
          },
          "dependencies": [
            "aws_eip.nat-gw-eip",
            "aws_internet_gateway.discogs_igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d168c68eb75d7849",
            "route_table_id": "rtb-07b284349d1acdeb1",
            "subnet_id": "subnet-0b470e57964a2bbaf"
          },
          "dependencies": [
            "aws_eip.nat-gw-eip",
            "aws_internet_gateway.discogs_igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb959f8c5b5d39d5",
            "route_table_id": "rtb-07b284349d1acdeb1",
            "subnet_id": "subnet-0edc467f7b6ad73d0"
          },
          "dependencies": [
            "aws_eip.nat-gw-eip",
            "aws_internet_gateway.discogs_igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "addRoute_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0587dcf3e4a48fae3",
            "route_table_id": "rtb-0b5e1d2f06eb679e5",
            "subnet_id": "subnet-0de72361c36d68943"
          },
          "dependencies": [
            "aws_internet_gateway.discogs_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8f4dd0e751d30eb",
            "route_table_id": "rtb-0b5e1d2f06eb679e5",
            "subnet_id": "subnet-077dd24920c8525e1"
          },
          "dependencies": [
            "aws_internet_gateway.discogs_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015d4bdb6aa8a1af0",
            "route_table_id": "rtb-0b5e1d2f06eb679e5",
            "subnet_id": "subnet-0cd850450b72ca330"
          },
          "dependencies": [
            "aws_internet_gateway.discogs_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:subnet/subnet-070653cfc33fd920e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070653cfc33fd920e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498382626667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-192.168.101.0/24-us-east-2a}"
            },
            "tags_all": {
              "Name": "private-192.168.101.0/24-us-east-2a}"
            },
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "dependencies": [
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:subnet/subnet-0b470e57964a2bbaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b470e57964a2bbaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498382626667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-192.168.102.0/24-us-east-2b}"
            },
            "tags_all": {
              "Name": "private-192.168.102.0/24-us-east-2b}"
            },
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "dependencies": [
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:subnet/subnet-0edc467f7b6ad73d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc467f7b6ad73d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498382626667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-192.168.103.0/24-us-east-2c}"
            },
            "tags_all": {
              "Name": "private-192.168.103.0/24-us-east-2c}"
            },
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "dependencies": [
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:subnet/subnet-0de72361c36d68943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de72361c36d68943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498382626667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-192.168.1.0/24-us-east-2a}"
            },
            "tags_all": {
              "Name": "public-192.168.1.0/24-us-east-2a}"
            },
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "dependencies": [
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:subnet/subnet-077dd24920c8525e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077dd24920c8525e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498382626667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-192.168.2.0/24-us-east-2b}"
            },
            "tags_all": {
              "Name": "public-192.168.2.0/24-us-east-2b}"
            },
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "dependencies": [
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:subnet/subnet-0cd850450b72ca330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd850450b72ca330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498382626667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-192.168.3.0/24-us-east-2c}"
            },
            "tags_all": {
              "Name": "public-192.168.3.0/24-us-east-2c}"
            },
            "vpc_id": "vpc-0d1c4759496dd1632"
          },
          "dependencies": [
            "aws_vpc.discogs_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "discogs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498382626667:vpc/vpc-0d1c4759496dd1632",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ed3d64c0a50c3676",
            "default_route_table_id": "rtb-0d2d875c5cf43054b",
            "default_security_group_id": "sg-08fff05a62bf1c574",
            "dhcp_options_id": "dopt-0387718ac1e02942b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1c4759496dd1632",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2d875c5cf43054b",
            "owner_id": "498382626667",
            "tags": {
              "Name": "discogs-vpc"
            },
            "tags_all": {
              "Name": "discogs-vpc"
            }
          }
        }
      ]
    }
  ]
}